# azure-mcp-server

./: README.md  create-storage.py  pyproject.toml
src/azure/tools/: resourcegroup.py  resources.py  storage.py  subscription.py
src/azure_mcp_server/: server.py
